# aio_gp_test

./: README.md  bootstrap.sh
FabricEventhouseHelperPyApp/: README.md  pyproject.toml  sample_mappings.yaml
FabricEventhouseHelperPyApp/src/: __init__.py
FabricEventhouseHelperPyApp/src/digitaloperations/fabriceventhousehelperpyapp/: eventhouse.py  main.py
FabricEventhouseHelperPyApp/tests/: README.md  run_tests.py  test_eventhouse_manager.py  test_main.py
aio-tools/: deploy_dataflow.sh  deploy_eventstream.sh  deploy_opc_publisher_discovery_handler.sh  deploy_opc_publisher_instance.sh  deploy_opc_publisher_template.sh  deploy_umati.sh  deploy_umati_no_dev.sh  deploy_umati_with_device.sh  discover_env.sh  onboard_fullmachine.sh  register_umati_device.sh
aio-tools/charts/: umati-sample-server-1.0-alpha.1.tgz
aio-tools/iotops/: opc-publisher-dataset-datapoint-schema.json
doc/: CREATE_DATAFLOW.md  CREATE_DEVICES_AND_ASSETS.md  CREATE_EVENTHOUSE.md  CREATE_EVENTSTREAM.md  DTB_ENTITY_CREATION.md  DTB_MAPPING_METADATA.md  DTB_MAPPING_TELEMETRY.md  EVENTSTREAM_TELEMETRY_FABRIC.md  INGEST_ADR_METADATA.md  INSTALL_CONNECTOR.md  INSTALL_CONNECTOR_TEMPLATE.md  INSTALL_DF_MANUAL.md  INSTALL_UMATI.md  ONBOARD_UMATI_ASSET.md  ONTOLOGY_MAPPING_METADATA.md  ONTOLOGY_MAPPING_TELEMETRY.md  QUICK_START_INIT.md
scripts/: discover_env.sh
