[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabriceventhousehelperpyapp"
version = "0.1"
description = "A CLI tool to help setup the Fabric Event House for Fabric Ontology"
authors = [
    {name = "Mustaqim Moulavi"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "azure-kusto-data",
    "azure-identity"
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
fabriceventhousehelperpyapp = "digitaloperations.fabriceventhousehelperpyapp.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
